egonlang-core/res/examples/invalid/const_decl_without_assign.eg
const a;

// out: SyntaxError: const `a` missing value. consts must be declared with a value
// out: TypeError: unknown type e.g. let a: unknown; or let a;